--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@600&family=Noto+Sans+Linear+B&display=swap" rel="stylesheet">
+
     <title>Discord</title>
 </head>
 <body>
+<header>
+    <nav class="container d-flex">
+        <img src="img/logo.svg" alt="logo-discord">
+        <ul class="d-flex">
+            <li><a href="">Download</a></li>
+            <li><a href="">Nitro</a></li>
+            <li><a href="">Discover</a></li>
+            <li><a href="">Safety</a></li>
+            <li><a href="">Support</a></li>
+        </ul>
+        <a class="button" href="">Accedi</a>
+    
+    </nav>
+    <div id="hero">
+        <div class="container d-flex flex-center">
+            <div class="hero-content">
+                <h2>Il tuo posto per parlare</h2>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            </div>
+        </div>
+    </div> 
+</header>
+<main>
+    <section>
+        <div class="container">
+            sezione 1
+        </div>
+    </section>
+    <section class="even">
+        <div class="container">
+            sezione 2
+        </div>
+    </section>
+</main>
+
+
+
     
 </body>
 </html>
