--- a/index.html
+++ b/index.html
@@ -28,13 +28,19 @@
                 <h2>Il tuo posto per parlare</h2>
                 <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
             </div>
+            <div class="d-flex flex-end "> 
+                <a class="button" href="">Scarica per MAC</a>
+                <a class="button" href="">Apri Discord nel tuo browser</a>
+            </div>
+           
         </div>
     </div> 
 </header>
 <main>
     <section>
-        <div class="container">
-            sezione 1
+        <div class="container flex.center">
+            <img src="img/item1.svg" alt="">
+            <span>Un luogo a invito con tutto lo spazio necessario per parlare</span>
         </div>
     </section>
     <section class="even">
@@ -42,7 +48,20 @@
             sezione 2
         </div>
     </section>
+    <section>
+        <div class="container">
+            sezione 3
+        </div>
+    </section>
+    <section class="even">
+        <div class="container">
+            sezione 4
+        </div>
+    </section>
 </main>
+<footer>
+
+</footer>
 
 
 
